@@ -1,10 +1,12 @@
 package confdb.db;
 
+import java.sql.DatabaseMetaData;
 import java.sql.DriverManager;
 import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
+import oracle.jdbc.pool.*;
 
 import java.util.ArrayList;
 
@@ -25,7 +27,6 @@ public class OracleDatabaseConnector extends DatabaseConnector
     /** name of the database driver */
     private static final String driver = "oracle.jdbc.driver.OracleDriver";
 
-    
     //
     // construction
     //
@@ -70,10 +71,31 @@ public class OracleDatabaseConnector extends DatabaseConnector
 	}
 
 	try {
-	    connection = DriverManager.getConnection(dbURL, dbUser, dbPassword);
+		connection = DriverManager.getConnection(dbURL, dbUser, dbPassword);
+			// DB and Driver Info:
+			try {
+				DatabaseMetaData dbmd;
+				dbmd = connection.getMetaData();
+			    System.out.println("=====  Database info =====");  
+			    System.out.println("DatabaseProductName: " + dbmd.getDatabaseProductName() );  
+			    System.out.println("DatabaseProductVersion: " + dbmd.getDatabaseProductVersion() );  
+			    System.out.println("DatabaseMajorVersion: " + dbmd.getDatabaseMajorVersion() );  
+			    System.out.println("DatabaseMinorVersion: " + dbmd.getDatabaseMinorVersion() );  
+			    System.out.println("=====  Driver info =====");  
+			    System.out.println("DriverName: " + dbmd.getDriverName() );  
+			    System.out.println("DriverVersion: " + dbmd.getDriverVersion() );  
+			    System.out.println("DriverMajorVersion: " + dbmd.getDriverMajorVersion() );  
+			    System.out.println("DriverMinorVersion: " + dbmd.getDriverMinorVersion() );  
+			    System.out.println("=====  JDBC/DB attributes =====");  
+			} catch (SQLException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 	}
 	catch (SQLException e) {
 	    String msg = "Failed to open connection to "+dbURL+" as user "+dbUser;
+	    System.out.println("Exception: " + e.getMessage());
+	    
 	    throw new DatabaseException(msg);
 	}
     }
